[project]
name = "apple-find-my-sync"
version = "0.1.0"
requires-python = ">=3.13"
description = "A set of tools to interact with the Apple Find My network."
dependencies = ["findmy", "httpx[http2]>=0.28.1", "setuptools>=80.9.0"]
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
microservice = "microservice:main"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["findmy", "."]

[tool.uv.sources]
findmy = { workspace = true }

[tool.setuptools]
py-modules = ["microservice"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["findmy"]
